<resources>
    <string name="app_name">EveryDayTasks</string>
    <string name="homeString">Tell me about your day...</string>
    <string name="EntryLogBtn">View your previous Entries</string>
    <string name="talkAboutItBtnText">Let\'s talk about it</string>
    <string name="todoListBtnText">Your todo List</string>
    <string name="foodLogBtnText">What you ate today</string>
    <string name="sleepLogText">Sleep Log</string>
    <string name="exerciseBtnText">Work it! Log your workout</string>
    <string name="action_settings">Settings</string>

    <!--Journal Strings-->
    <string name="save">Save</string>
    <string name="prevEntries">Entry Log</string>

    <!-- Sleep log Strings -->
    <string name="sleepLog">Sleep Entry</string>
    <string name="sleepStart">When did you go to bed?</string>
    <string name="sleepEnd">When did you wake up?</string>
    <string name="timeSpentSleeping">How long you slept</string>
    <string name="sleepQuality">Enter Sleep Quality</string>
    <string name="btn_wake_time">Enter wake time</string>
    <string name="btn_sleep_time">Enter start time</string>
    <string name="btn_date">Enter date</string>
    <string name="sleepDateString">When did this sleep occur?</string>
    <string name="prev_sleeps">Past Sleep Entries</string>
    <string name="rating">Rating</string>
    <string name="delete_prev_entry">Delete Entry</string>

    <!-- to-do Strings -->
    <string name="todoHeader">You\'re Todo\'s</string>
    <string name="doneTodos">What you have done</string>
    <string name="add_todo">Add a Todo</string>

    <!--Previous Entries List View Strings -->
    <string name="prev_entry_for_sleep_journal">Previous Entries for Sleep and Journal Logs</string>
    <string name="prev_entry_choice">Please choose which type of entries you want to view</string>
</resources>
