<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kendraslaptop.example.com.everydaytasks.MainActivity">

    <Button
        android:text="@string/foodLogBtnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foodEntryBtnId"
        android:fontFamily="casual"
        android:onClick="onClickFoodLog"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/exerciseBtnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exersiceBtnId"
        android:fontFamily="casual"
        android:textSize="14sp"
        android:onClick="onClickWorkoutLog"
        android:layout_alignBottom="@+id/dayBtnId"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/journalBtnId" />

    <Button
        android:text="@string/talkAboutItBtnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/journalBtnId"
        android:fontFamily="casual"
        android:onClick="onClickJournal"
        android:layout_alignBaseline="@+id/foodEntryBtnId"
        android:layout_alignBottom="@+id/foodEntryBtnId"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/todoListBtnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/todoBtnId"
        android:fontFamily="casual"
        android:onClick="onClickTodo"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/foodEntryBtnId"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/foodEntryBtnId" />

    <Button
        android:text="@string/EntryLogBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dayBtnId"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:onClick="onPreviousEntries"
        android:layout_below="@+id/foodEntryBtnId"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/foodEntryBtnId" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorAccent"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?android:attr/actionBarSize"
        android:id="@+id/home_toolbar_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeString"
        android:id="@+id/homeTextStringId"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:fontFamily="casual"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:onClick="onClickJournal"
        android:layout_below="@+id/home_toolbar_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:text="@string/sleepLogText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sleepLogBtnId"
        android:fontFamily="casual"
        android:onClick="onClickSleepLog"
        android:layout_alignBaseline="@+id/todoBtnId"
        android:layout_alignBottom="@+id/todoBtnId"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/journalBtnId" />

</RelativeLayout>
